cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_31.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:32: error: DEAD_STORE
  The value written to &in2 (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:32:5: Write of unused value
30.       in2 = &(*outw)[0];
31.       c2l(in2, outW0);
32.       c2l(in2, outW1);
          ^
33.   
34.       iv = &(*ivec)[0];
